[gd_scene load_steps=48 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/RatStaticSheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RatFurSheet.png" type="Texture" id=3]
[ext_resource path="res://Sprites/TestRatSheet.png" type="Texture" id=4]
[ext_resource path="res://Sprites/wings.png" type="Texture" id=5]
[ext_resource path="res://Fonts/rony-siswadi-15-font/Ronysiswadi15-51Dv8.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Menu/Settings.tscn" type="PackedScene" id=7]
[ext_resource path="res://Fonts/SupplyCenterTheme.tres" type="Theme" id=8]
[ext_resource path="res://Sprites/SettingsIcon.png" type="Texture" id=9]
[ext_resource path="res://Sprites/HomeIcon.png" type="Texture" id=10]

[sub_resource type="Shader" id=60]
code = "shader_type canvas_item;

uniform vec4 color :hint_color;
uniform float multipler =0.2;
uniform float softness = 3.0;
uniform float val  = 3.0;

void fragment()
{
	float value = distance(UV, vec2(val));
	COLOR = vec4(color.rgb, smoothstep(multipler,softness, value));
}"

[sub_resource type="ShaderMaterial" id=61]
shader = SubResource( 60 )
shader_param/color = Color( 1, 0, 0, 1 )
shader_param/multipler = 0.1
shader_param/softness = 1.0
shader_param/val = 0.5

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 5 )
region = Rect2( 167, 0, 167, 107 )

[sub_resource type="SpriteFrames" id=57]
animations = [ {
"frames": [ SubResource( 58 ) ],
"loop": true,
"name": "One",
"speed": 5.0
}, {
"frames": [ SubResource( 59 ) ],
"loop": true,
"name": "Two",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 1002, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 1169, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 1336, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 1503, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 1169, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 1670, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 334, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 334, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 501, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 668, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 835, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 166, 107 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 4 )
region = Rect2( 166, 0, 166, 107 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "Climb",
"speed": 6.0
}, {
"frames": [ SubResource( 34 ) ],
"loop": true,
"name": "ClimbStationary",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": true,
"name": "TestIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ) ],
"loop": true,
"name": "TestRun",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 1002, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 1169, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 1336, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 1503, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 1169, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 1670, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 334, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 334, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 501, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 668, 0, 167, 107 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 835, 0, 167, 107 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "Climb",
"speed": 6.0
}, {
"frames": [ SubResource( 46 ) ],
"loop": true,
"name": "ClimbStationary",
"speed": 5.0
}, {
"frames": [ SubResource( 47 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 48 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 49 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "Run",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.77785, 6.7507 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.91021, 10 )

[sub_resource type="DynamicFont" id=63]
size = 25
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=62]
default_font = SubResource( 63 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.5, -16.5 )
smoothing_speed = 20.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
modulate = Color( 1, 1, 1, 0.643137 )
material = SubResource( 61 )
margin_left = -514.0
margin_top = -302.0
margin_right = 515.0
margin_bottom = 303.0

[node name="Wings" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -16.5 )
frames = SubResource( 57 )
animation = "One"

[node name="FurSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.20137, 0.265465, 0.324219, 1 )
position = Vector2( -0.5, -16.5 )
frames = SubResource( 29 )
animation = "Run"

[node name="StaticSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, -16.5 )
frames = SubResource( 17 )
animation = "Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -19.22 )
scale = Vector2( 1.481, 2.856 )
shape = SubResource( 5 )

[node name="PlayerFeet" type="Area2D" parent="."]
position = Vector2( -0.5, -16.5 )
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFeet"]
position = Vector2( 0, 14.5 )
scale = Vector2( 1.4, 0.25 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Objective" type="RichTextLabel" parent="."]
margin_left = -505.0
margin_top = -312.0
margin_right = 465.0
margin_bottom = 136.0
theme = SubResource( 62 )
text = "Objective"

[node name="Pause" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Pause"]
margin_left = -594.0
margin_top = -404.0
margin_right = -554.0
margin_bottom = -364.0
rect_scale = Vector2( 30, 20 )
color = Color( 0, 0, 0, 0.423529 )

[node name="Label" type="Label" parent="Pause"]
margin_left = -80.0
margin_top = -230.0
margin_right = 81.0
margin_bottom = -192.0
theme = ExtResource( 8 )
text = "Paused"

[node name="Buttons" type="Node2D" parent="Pause"]
position = Vector2( 0, -110 )

[node name="Continue" type="Button" parent="Pause/Buttons"]
margin_left = -161.0
margin_top = -30.0
margin_right = 161.0
margin_bottom = 56.0
theme = ExtResource( 8 )
text = "Continue"

[node name="Restart" type="Button" parent="Pause/Buttons"]
margin_left = -161.0
margin_top = 70.0
margin_right = 161.0
margin_bottom = 156.0
rect_pivot_offset = Vector2( -913, 0 )
theme = ExtResource( 8 )
text = "Restart"

[node name="Settings" type="Button" parent="Pause/Buttons"]
margin_left = 7.0
margin_top = 170.0
margin_right = 161.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( -913, 0 )
theme = ExtResource( 8 )
icon = ExtResource( 9 )
icon_align = 1
expand_icon = true

[node name="Main Menu" type="Button" parent="Pause/Buttons"]
margin_left = -161.0
margin_top = 170.0
margin_right = -7.0
margin_bottom = 256.0
theme = ExtResource( 8 )
icon = ExtResource( 10 )
icon_align = 1
expand_icon = true

[node name="Settings" parent="." instance=ExtResource( 7 )]

[connection signal="area_entered" from="PlayerFeet" to="." method="_on_Feet_area_entered"]
[connection signal="area_exited" from="PlayerFeet" to="." method="_on_Feet_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="button_down" from="Pause/Buttons/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="Pause/Buttons/Restart" to="." method="_on_Restart_button_down"]
[connection signal="button_down" from="Pause/Buttons/Settings" to="." method="_on_Settings_button_down"]
[connection signal="button_down" from="Pause/Buttons/Main Menu" to="." method="_on_Main_Menu_button_down"]
